fixed java compiler